--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-themes": "^0.3.0",
     "nookies": "^2.5.2",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.16",
