work page initialization

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "sonner": "^1.4.41",
     "sugar-high": "^0.6.0",
     "superjson": "^2.2.1",
+    "swiper": "^11.1.4",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
