--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "markdown-to-jsx": "^7.4.6",
     "next": "14.0.4",
     "next-themes": "^0.3.0",
+    "next-videos": "^1.4.1",
     "nookies": "^2.5.2",
     "react": "^18",
     "react-countup": "^6.5.3",
