--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.16",
+    "react-scroll": "^1.9.0",
     "react-tweet": "^3.2.0",
     "react-wrap-balancer": "^1.1.0",
     "sonner": "^1.4.41",
@@ -67,6 +68,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.0.1",
     "encoding": "^0.1.13",
     "eslint": "^8",
